--- a/data/thombashi_tcconfig.json
+++ b/data/thombashi_tcconfig.json
@@ -2,18 +2,18 @@
     "owner_name": "Tsuyoshi Hombashi", 
     "name": "tcconfig", 
     "language": "Python", 
-    "avatar_url": "https://avatars.githubusercontent.com/u/15517661?v=3", 
+    "avatar_url": "https://avatars3.githubusercontent.com/u/15517661?v=3", 
     "repo_homepage": "http://tcconfig.rtfd.io/", 
     "created_at": "2016-01-17T16:24:09", 
     "forks_count": 13, 
     "html_url": "https://github.com/thombashi/tcconfig", 
-    "updated_at": "2017-02-26T12:30:27", 
+    "updated_at": "2017-03-02T17:30:39", 
     "card_type": "repository", 
     "latest_tag": "v0.7.1", 
     "version": "0.0.1", 
-    "fetched_at": "2017-02-27T22:15:36", 
+    "fetched_at": "2017-03-05T18:55:28", 
     "owner_html_url": "https://github.com/thombashi", 
     "id": "thombashi/tcconfig", 
-    "stargazers_count": 160, 
+    "stargazers_count": 162, 
     "repo_description": "A simple tc command wrapper tool. Easy to setup traffic control of network bandwidth/latency/packet-loss/packet-corruption to network interfaces."
 }
