--- a/data/thombashi_appconfigpy.json
+++ b/data/thombashi_appconfigpy.json
@@ -1,19 +1,93 @@
 {
-    "owner_name": "Tsuyoshi Hombashi", 
-    "name": "appconfigpy", 
-    "language": "Python", 
-    "avatar_url": "https://avatars3.githubusercontent.com/u/15517661?v=3", 
-    "repo_homepage": null, 
-    "created_at": "2017-03-05T09:09:58", 
+    "has_wiki": false, 
     "forks_count": 0, 
-    "html_url": "https://github.com/thombashi/appconfigpy", 
     "updated_at": "2017-03-05T09:17:47", 
-    "card_type": "repository", 
-    "latest_tag": "v0.0.1", 
-    "version": "0.0.1", 
-    "fetched_at": "2017-03-05T19:17:48", 
     "owner_html_url": "https://github.com/thombashi", 
     "id": "thombashi/appconfigpy", 
+    "license": {
+        "spdx_id": "MIT", 
+        "url": "https://api.github.com/licenses/mit", 
+        "featured": true, 
+        "name": "MIT License", 
+        "key": "mit"
+    }, 
+    "tags_count": 1, 
+    "languages": {
+        "Python": 7219
+    }, 
+    "version": "0.0.1", 
+    "latest_tag": "v0.0.1", 
     "stargazers_count": 0, 
-    "repo_description": "A Python library to create/load an application configuration file."
+    "participation": [
+        0, 
+        0, 
+        0, 
+        0, 
+        0, 
+        0, 
+        0, 
+        0, 
+        0, 
+        0, 
+        0, 
+        0, 
+        0, 
+        0, 
+        0, 
+        0, 
+        0, 
+        0, 
+        0, 
+        0, 
+        0, 
+        0, 
+        0, 
+        0, 
+        0, 
+        0, 
+        0, 
+        0, 
+        0, 
+        0, 
+        0, 
+        0, 
+        0, 
+        0, 
+        0, 
+        0, 
+        0, 
+        0, 
+        0, 
+        0, 
+        0, 
+        0, 
+        0, 
+        0, 
+        0, 
+        0, 
+        0, 
+        0, 
+        0, 
+        0, 
+        3, 
+        0
+    ], 
+    "owner_name": "Tsuyoshi Hombashi", 
+    "repo_homepage": null, 
+    "subscribers_count": 1, 
+    "html_url": "https://github.com/thombashi/appconfigpy", 
+    "language": "Python", 
+    "contributors_count": 1, 
+    "fetched_at": "2017-03-14T00:34:54", 
+    "has_issues": true, 
+    "repo_description": "A Python library to create/load an application configuration file.", 
+    "open_issues_count": 0, 
+    "name": "appconfigpy", 
+    "branches_count": 1, 
+    "pulls_count": 0, 
+    "created_at": "2017-03-05T09:09:58", 
+    "card_type": "repository", 
+    "avatar_url": "https://avatars3.githubusercontent.com/u/15517661?v=3", 
+    "open_issues": {}, 
+    "organization": {}
 }
