--- a/data/thombashi_tcconfig.json
+++ b/data/thombashi_tcconfig.json
@@ -1,19 +1,101 @@
 {
-    "owner_name": "Tsuyoshi Hombashi", 
-    "name": "tcconfig", 
-    "language": "Python", 
-    "avatar_url": "https://avatars3.githubusercontent.com/u/15517661?v=3", 
-    "repo_homepage": "http://tcconfig.rtfd.io/", 
-    "created_at": "2016-01-17T16:24:09", 
+    "has_wiki": false, 
     "forks_count": 13, 
-    "html_url": "https://github.com/thombashi/tcconfig", 
-    "updated_at": "2017-03-02T17:30:39", 
-    "card_type": "repository", 
-    "latest_tag": "v0.7.1", 
-    "version": "0.0.1", 
-    "fetched_at": "2017-03-05T18:55:28", 
+    "updated_at": "2017-03-11T12:35:26", 
     "owner_html_url": "https://github.com/thombashi", 
     "id": "thombashi/tcconfig", 
+    "license": {
+        "spdx_id": "MIT", 
+        "url": "https://api.github.com/licenses/mit", 
+        "featured": true, 
+        "name": "MIT License", 
+        "key": "mit"
+    }, 
+    "tags_count": 24, 
+    "languages": {
+        "Python": 114763, 
+        "Shell": 717
+    }, 
+    "version": "0.0.1", 
+    "latest_tag": "v0.7.2", 
     "stargazers_count": 162, 
-    "repo_description": "A simple tc command wrapper tool. Easy to setup traffic control of network bandwidth/latency/packet-loss/packet-corruption to network interfaces."
+    "participation": [
+        9, 
+        0, 
+        10, 
+        0, 
+        4, 
+        0, 
+        0, 
+        0, 
+        0, 
+        0, 
+        0, 
+        0, 
+        0, 
+        11, 
+        0, 
+        0, 
+        0, 
+        0, 
+        0, 
+        0, 
+        0, 
+        76, 
+        10, 
+        47, 
+        0, 
+        24, 
+        28, 
+        0, 
+        0, 
+        0, 
+        21, 
+        0, 
+        0, 
+        13, 
+        8, 
+        0, 
+        0, 
+        0, 
+        0, 
+        0, 
+        2, 
+        1, 
+        10, 
+        31, 
+        41, 
+        0, 
+        2, 
+        8, 
+        4, 
+        10, 
+        0, 
+        8
+    ], 
+    "owner_name": "Tsuyoshi Hombashi", 
+    "repo_homepage": "http://tcconfig.rtfd.io/", 
+    "subscribers_count": 7, 
+    "html_url": "https://github.com/thombashi/tcconfig", 
+    "language": "Python", 
+    "contributors_count": 4, 
+    "fetched_at": "2017-03-14T00:34:30", 
+    "has_issues": true, 
+    "repo_description": "A simple tc command wrapper tool. Easy to setup traffic control of network bandwidth/latency/packet-loss/packet-corruption to network interfaces.", 
+    "open_issues_count": 2, 
+    "name": "tcconfig", 
+    "branches_count": 2, 
+    "pulls_count": 0, 
+    "created_at": "2016-01-17T16:24:09", 
+    "card_type": "repository", 
+    "avatar_url": "https://avatars3.githubusercontent.com/u/15517661?v=3", 
+    "open_issues": {
+        "labels": [
+            "enhancement"
+        ], 
+        "data": [
+            2
+        ]
+    }, 
+    "organization": {}
 }
