--- a/data/thombashi_appconfigpy.json
+++ b/data/thombashi_appconfigpy.json
@@ -13,9 +13,15 @@
     }, 
     "tags_count": 1, 
     "languages": {
-        "Python": 7219
+        "labels": [
+            "Python"
+        ], 
+        "data": [
+            7219
+        ]
     }, 
-    "version": "0.0.1", 
+    "data_version": "0.0.1", 
+    "pulls_count": 0, 
     "latest_tag": "v0.0.1", 
     "stargazers_count": 0, 
     "participation": [
@@ -76,18 +82,22 @@
     "repo_homepage": null, 
     "subscribers_count": 1, 
     "html_url": "https://github.com/thombashi/appconfigpy", 
+    "languages_count": 1, 
     "language": "Python", 
+    "commits_last_year": 3, 
     "contributors_count": 1, 
-    "fetched_at": "2017-03-14T00:34:54", 
+    "fetched_at": "2017-03-20T00:59:02", 
     "has_issues": true, 
     "repo_description": "A Python library to create/load an application configuration file.", 
     "open_issues_count": 0, 
     "name": "appconfigpy", 
     "branches_count": 1, 
-    "pulls_count": 0, 
     "created_at": "2017-03-05T09:09:58", 
     "card_type": "repository", 
     "avatar_url": "https://avatars3.githubusercontent.com/u/15517661?v=3", 
-    "open_issues": {}, 
+    "open_issues": {
+        "labels": [], 
+        "data": []
+    }, 
     "organization": {}
 }
