--- a/data/thombashi_tcconfig.json
+++ b/data/thombashi_tcconfig.json
@@ -1,7 +1,7 @@
 {
     "has_wiki": false, 
     "forks_count": 13, 
-    "updated_at": "2017-03-11T12:35:26", 
+    "updated_at": "2017-03-18T10:55:23", 
     "owner_html_url": "https://github.com/thombashi", 
     "id": "thombashi/tcconfig", 
     "license": {
@@ -11,20 +11,27 @@
         "name": "MIT License", 
         "key": "mit"
     }, 
-    "tags_count": 24, 
+    "tags_count": 25, 
     "languages": {
-        "Python": 114763, 
-        "Shell": 717
+        "labels": [
+            "Python", 
+            "Shell"
+        ], 
+        "data": [
+            119817, 
+            717
+        ]
     }, 
-    "version": "0.0.1", 
-    "latest_tag": "v0.7.2", 
-    "stargazers_count": 162, 
+    "data_version": "0.0.1", 
+    "pulls_count": 0, 
+    "latest_tag": "v0.8.0", 
+    "stargazers_count": 163, 
     "participation": [
         9, 
-        0, 
-        10, 
-        0, 
+        6, 
         4, 
+        4, 
+        0, 
         0, 
         0, 
         0, 
@@ -40,10 +47,10 @@
         0, 
         0, 
         0, 
-        0, 
-        76, 
-        10, 
-        47, 
+        46, 
+        30, 
+        17, 
+        40, 
         0, 
         24, 
         28, 
@@ -59,33 +66,34 @@
         0, 
         0, 
         0, 
-        0, 
         2, 
-        1, 
-        10, 
-        31, 
-        41, 
         0, 
+        5, 
+        8, 
+        43, 
+        27, 
         2, 
         8, 
         4, 
+        0, 
         10, 
         0, 
-        8
+        9
     ], 
     "owner_name": "Tsuyoshi Hombashi", 
     "repo_homepage": "http://tcconfig.rtfd.io/", 
     "subscribers_count": 7, 
     "html_url": "https://github.com/thombashi/tcconfig", 
+    "languages_count": 2, 
     "language": "Python", 
+    "commits_last_year": 379, 
     "contributors_count": 4, 
-    "fetched_at": "2017-03-14T00:34:30", 
+    "fetched_at": "2017-03-20T00:58:43", 
     "has_issues": true, 
     "repo_description": "A simple tc command wrapper tool. Easy to setup traffic control of network bandwidth/latency/packet-loss/packet-corruption to network interfaces.", 
     "open_issues_count": 2, 
     "name": "tcconfig", 
     "branches_count": 2, 
-    "pulls_count": 0, 
     "created_at": "2016-01-17T16:24:09", 
     "card_type": "repository", 
     "avatar_url": "https://avatars3.githubusercontent.com/u/15517661?v=3", 
