--- a/data/thombashi_appconfigpy.json
+++ b/data/thombashi_appconfigpy.json
@@ -1,103 +1,1 @@
-{
-    "has_wiki": false, 
-    "forks_count": 0, 
-    "updated_at": "2017-03-05T09:17:47", 
-    "owner_html_url": "https://github.com/thombashi", 
-    "id": "thombashi/appconfigpy", 
-    "license": {
-        "spdx_id": "MIT", 
-        "url": "https://api.github.com/licenses/mit", 
-        "featured": true, 
-        "name": "MIT License", 
-        "key": "mit"
-    }, 
-    "tags_count": 1, 
-    "languages": {
-        "labels": [
-            "Python"
-        ], 
-        "data": [
-            7219
-        ]
-    }, 
-    "data_version": "0.0.1", 
-    "pulls_count": 0, 
-    "latest_tag": "v0.0.1", 
-    "stargazers_count": 0, 
-    "participation": [
-        0, 
-        0, 
-        0, 
-        0, 
-        0, 
-        0, 
-        0, 
-        0, 
-        0, 
-        0, 
-        0, 
-        0, 
-        0, 
-        0, 
-        0, 
-        0, 
-        0, 
-        0, 
-        0, 
-        0, 
-        0, 
-        0, 
-        0, 
-        0, 
-        0, 
-        0, 
-        0, 
-        0, 
-        0, 
-        0, 
-        0, 
-        0, 
-        0, 
-        0, 
-        0, 
-        0, 
-        0, 
-        0, 
-        0, 
-        0, 
-        0, 
-        0, 
-        0, 
-        0, 
-        0, 
-        0, 
-        0, 
-        0, 
-        0, 
-        0, 
-        3, 
-        0
-    ], 
-    "owner_name": "Tsuyoshi Hombashi", 
-    "repo_homepage": null, 
-    "subscribers_count": 1, 
-    "html_url": "https://github.com/thombashi/appconfigpy", 
-    "languages_count": 1, 
-    "language": "Python", 
-    "commits_last_year": 3, 
-    "contributors_count": 1, 
-    "fetched_at": "2017-03-20T00:59:02", 
-    "has_issues": true, 
-    "repo_description": "A Python library to create/load an application configuration file.", 
-    "open_issues_count": 0, 
-    "name": "appconfigpy", 
-    "branches_count": 1, 
-    "created_at": "2017-03-05T09:09:58", 
-    "card_type": "repository", 
-    "avatar_url": "https://avatars3.githubusercontent.com/u/15517661?v=3", 
-    "open_issues": {
-        "labels": [], 
-        "data": []
-    }, 
-    "organization": {}
-}
+{"has_wiki": false, "forks_count": 0, "updated_at": "2017-03-05T09:17:47", "owner_html_url": "https://github.com/thombashi", "id": "thombashi/appconfigpy", "license": {"spdx_id": "MIT", "url": "https://api.github.com/licenses/mit", "featured": true, "name": "MIT License", "key": "mit"}, "tags_count": 1, "languages": {"labels": ["Python"], "data": [7219]}, "data_version": 1, "pulls_count": 0, "latest_tag": "v0.0.1", "stargazers_count": 0, "emojis": {}, "participation": [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 3, 0, 0], "owner_name": "Tsuyoshi Hombashi", "repo_homepage": null, "subscribers_count": 1, "html_url": "https://github.com/thombashi/appconfigpy", "languages_count": 1, "language": "Python", "commits_last_year": 3, "contributors_count": 1, "fetched_at": "2017-03-20T21:03:39", "has_issues": true, "repo_description": "A Python library to create/load an application configuration file.", "open_issues_count": 0, "name": "appconfigpy", "branches_count": 1, "created_at": "2017-03-05T09:09:58", "card_type": "repository", "avatar_url": "https://avatars3.githubusercontent.com/u/15517661?v=3", "open_issues": {"labels": [], "data": []}, "organization": {}}
