--- a/data/thombashi_tcconfig.json
+++ b/data/thombashi_tcconfig.json
@@ -1,109 +1,1 @@
-{
-    "has_wiki": false, 
-    "forks_count": 13, 
-    "updated_at": "2017-03-18T10:55:23", 
-    "owner_html_url": "https://github.com/thombashi", 
-    "id": "thombashi/tcconfig", 
-    "license": {
-        "spdx_id": "MIT", 
-        "url": "https://api.github.com/licenses/mit", 
-        "featured": true, 
-        "name": "MIT License", 
-        "key": "mit"
-    }, 
-    "tags_count": 25, 
-    "languages": {
-        "labels": [
-            "Python", 
-            "Shell"
-        ], 
-        "data": [
-            119817, 
-            717
-        ]
-    }, 
-    "data_version": "0.0.1", 
-    "pulls_count": 0, 
-    "latest_tag": "v0.8.0", 
-    "stargazers_count": 163, 
-    "participation": [
-        9, 
-        6, 
-        4, 
-        4, 
-        0, 
-        0, 
-        0, 
-        0, 
-        0, 
-        0, 
-        0, 
-        0, 
-        0, 
-        11, 
-        0, 
-        0, 
-        0, 
-        0, 
-        0, 
-        0, 
-        46, 
-        30, 
-        17, 
-        40, 
-        0, 
-        24, 
-        28, 
-        0, 
-        0, 
-        0, 
-        21, 
-        0, 
-        0, 
-        13, 
-        8, 
-        0, 
-        0, 
-        0, 
-        0, 
-        2, 
-        0, 
-        5, 
-        8, 
-        43, 
-        27, 
-        2, 
-        8, 
-        4, 
-        0, 
-        10, 
-        0, 
-        9
-    ], 
-    "owner_name": "Tsuyoshi Hombashi", 
-    "repo_homepage": "http://tcconfig.rtfd.io/", 
-    "subscribers_count": 7, 
-    "html_url": "https://github.com/thombashi/tcconfig", 
-    "languages_count": 2, 
-    "language": "Python", 
-    "commits_last_year": 379, 
-    "contributors_count": 4, 
-    "fetched_at": "2017-03-20T00:58:43", 
-    "has_issues": true, 
-    "repo_description": "A simple tc command wrapper tool. Easy to setup traffic control of network bandwidth/latency/packet-loss/packet-corruption to network interfaces.", 
-    "open_issues_count": 2, 
-    "name": "tcconfig", 
-    "branches_count": 2, 
-    "created_at": "2016-01-17T16:24:09", 
-    "card_type": "repository", 
-    "avatar_url": "https://avatars3.githubusercontent.com/u/15517661?v=3", 
-    "open_issues": {
-        "labels": [
-            "enhancement"
-        ], 
-        "data": [
-            2
-        ]
-    }, 
-    "organization": {}
-}
+{"has_wiki": false, "forks_count": 13, "updated_at": "2017-03-18T10:55:23", "owner_html_url": "https://github.com/thombashi", "id": "thombashi/tcconfig", "license": {"spdx_id": "MIT", "url": "https://api.github.com/licenses/mit", "featured": true, "name": "MIT License", "key": "mit"}, "tags_count": 25, "languages": {"labels": ["Python", "Shell"], "data": [119817, 717]}, "data_version": 1, "pulls_count": 0, "latest_tag": "v0.8.0", "stargazers_count": 163, "emojis": {}, "participation": [0, 10, 0, 4, 0, 0, 0, 0, 0, 0, 0, 0, 11, 0, 0, 0, 0, 0, 0, 0, 76, 10, 47, 0, 24, 28, 0, 0, 0, 21, 0, 0, 13, 8, 0, 0, 0, 0, 0, 2, 1, 10, 31, 41, 0, 2, 8, 4, 10, 0, 8, 16], "owner_name": "Tsuyoshi Hombashi", "repo_homepage": "http://tcconfig.rtfd.io/", "subscribers_count": 7, "html_url": "https://github.com/thombashi/tcconfig", "languages_count": 2, "language": "Python", "commits_last_year": 385, "contributors_count": 4, "fetched_at": "2017-03-20T21:03:16", "has_issues": true, "repo_description": "A simple tc command wrapper tool. Easy to setup traffic control of network bandwidth/latency/packet-loss/packet-corruption to network interfaces.", "open_issues_count": 2, "name": "tcconfig", "branches_count": 2, "created_at": "2016-01-17T16:24:09", "card_type": "repository", "avatar_url": "https://avatars3.githubusercontent.com/u/15517661?v=3", "open_issues": {"labels": ["enhancement"], "data": [2]}, "organization": {}}
