Update card data

--- a/data/thombashi_tcconfig.json
+++ b/data/thombashi_tcconfig.json
@@ -1,1 +1,119 @@
-{"id": "thombashi/tcconfig", "fetched_at": "2018-09-17T21:52:01", "data_version": 2, "result": "success", "avatar_url": "https://avatars0.githubusercontent.com/u/15517661?v=4", "card_type": "Repository", "created_at": "2016-01-17T16:24:09", "description": "A tc command wrapper. Easy to set up traffic control of network bandwidth/latency/packet-loss/packet-corruption/etc. to a network-interface/Docker-container(veth).", "emojis": {}, "html_url": "https://github.com/thombashi/tcconfig", "name": "tcconfig", "updated_at": "2018-09-16T03:30:54", "forks_count": 29, "has_issues": true, "has_wiki": false, "language": "Python", "languages": {"labels": ["Python", "Shell"], "data": [279364, 1926]}, "languages_count": 2, "owner_name": "Tsuyoshi Hombashi", "owner_html_url": "https://github.com/thombashi", "open_issues_count": 2, "organization": {}, "repo_homepage": "https://tcconfig.rtfd.io/", "stargazers_count": 299, "topics": ["cli-app", "docker", "network", "tc", "traffic-shaping", "wrapper"], "participation": [0, 0, 2, 17, 6, 7, 12, 3, 0, 0, 0, 0, 0, 0, 6, 3, 0, 5, 0, 1, 16, 0, 0, 0, 0, 0, 0, 0, 19, 26, 2, 5, 59, 0, 1, 4, 2, 0, 0, 0, 0, 7, 1, 38, 4, 4, 10, 0, 10, 0, 3, 10], "commits_last_year": 283, "latest_tag": "v0.20.2", "branches_count": 1, "pulls_count": 0, "subscribers_count": 15, "license": {"key": "mit", "name": "MIT License", "spdx_id": "MIT", "url": "https://api.github.com/licenses/mit", "node_id": "MDc6TGljZW5zZTEz"}, "contributors_count": 6, "tags_count": 54, "open_issues": {"labels": ["bug", "not set"], "data": [1, 1]}}
+{
+    "id": "thombashi/tcconfig",
+    "fetched_at": "2018-09-30T10:04:18",
+    "data_version": 2,
+    "result": "success",
+    "avatar_url": "https://avatars0.githubusercontent.com/u/15517661?v=4",
+    "card_type": "Repository",
+    "created_at": "2016-01-17T16:24:09",
+    "description": "A tc command wrapper. Easy to set up traffic control of network bandwidth/latency/packet-loss/packet-corruption/etc. to a network-interface/Docker-container(veth).",
+    "emojis": {},
+    "html_url": "https://github.com/thombashi/tcconfig",
+    "name": "tcconfig",
+    "updated_at": "2018-09-27T12:01:12",
+    "forks_count": 31,
+    "has_issues": true,
+    "has_wiki": false,
+    "language": "Python",
+    "languages": {
+        "labels": [
+            "Python",
+            "Shell"
+        ],
+        "data": [
+            279363,
+            1944
+        ]
+    },
+    "languages_count": 2,
+    "owner_name": "Tsuyoshi Hombashi",
+    "owner_html_url": "https://github.com/thombashi",
+    "open_issues_count": 1,
+    "organization": {},
+    "repo_homepage": "https://tcconfig.rtfd.io/",
+    "stargazers_count": 305,
+    "topics": [
+        "cli-app",
+        "docker",
+        "network",
+        "tc",
+        "traffic-shaping",
+        "wrapper"
+    ],
+    "participation": [
+        2,
+        17,
+        6,
+        7,
+        12,
+        3,
+        0,
+        0,
+        0,
+        0,
+        0,
+        0,
+        6,
+        3,
+        0,
+        5,
+        0,
+        1,
+        16,
+        0,
+        0,
+        0,
+        0,
+        0,
+        0,
+        0,
+        19,
+        26,
+        2,
+        5,
+        59,
+        0,
+        1,
+        4,
+        2,
+        0,
+        0,
+        0,
+        0,
+        7,
+        1,
+        38,
+        4,
+        4,
+        10,
+        0,
+        10,
+        0,
+        3,
+        10,
+        4,
+        0
+    ],
+    "commits_last_year": 287,
+    "latest_tag": "v0.20.2",
+    "branches_count": 1,
+    "pulls_count": 0,
+    "subscribers_count": 15,
+    "license": {
+        "key": "mit",
+        "name": "MIT License",
+        "spdx_id": "MIT",
+        "url": "https://api.github.com/licenses/mit",
+        "node_id": "MDc6TGljZW5zZTEz"
+    },
+    "contributors_count": 6,
+    "tags_count": 54,
+    "open_issues": {
+        "labels": [
+            "not set"
+        ],
+        "data": [
+            1
+        ]
+    }
+}
