Update card data

--- a/data/thombashi_tcconfig.json
+++ b/data/thombashi_tcconfig.json
@@ -1,6 +1,6 @@
 {
     "id": "thombashi/tcconfig",
-    "fetched_at": "2018-09-30T10:04:18",
+    "fetched_at": "2018-10-09T07:44:16",
     "data_version": 2,
     "result": "success",
     "avatar_url": "https://avatars0.githubusercontent.com/u/15517661?v=4",
@@ -10,8 +10,8 @@
     "emojis": {},
     "html_url": "https://github.com/thombashi/tcconfig",
     "name": "tcconfig",
-    "updated_at": "2018-09-27T12:01:12",
-    "forks_count": 31,
+    "updated_at": "2018-10-08T07:42:14",
+    "forks_count": 32,
     "has_issues": true,
     "has_wiki": false,
     "language": "Python",
@@ -21,7 +21,7 @@
             "Shell"
         ],
         "data": [
-            279363,
+            279374,
             1944
         ]
     },
@@ -31,35 +31,34 @@
     "open_issues_count": 1,
     "organization": {},
     "repo_homepage": "https://tcconfig.rtfd.io/",
-    "stargazers_count": 305,
+    "stargazers_count": 307,
     "topics": [
         "cli-app",
         "docker",
+        "linux",
         "network",
         "tc",
         "traffic-shaping",
         "wrapper"
     ],
     "participation": [
-        2,
+        0,
+        6,
+        8,
+        14,
+        0,
+        0,
+        0,
+        0,
+        0,
+        0,
+        0,
+        6,
+        3,
+        0,
+        5,
+        0,
         17,
-        6,
-        7,
-        12,
-        3,
-        0,
-        0,
-        0,
-        0,
-        0,
-        0,
-        6,
-        3,
-        0,
-        5,
-        0,
-        1,
-        16,
         0,
         0,
         0,
@@ -67,38 +66,40 @@
         0,
         0,
         0,
-        19,
-        26,
-        2,
-        5,
-        59,
         0,
-        1,
-        4,
-        2,
-        0,
-        0,
-        0,
+        45,
         0,
         7,
-        1,
-        38,
-        4,
-        4,
-        10,
-        0,
-        10,
-        0,
         3,
+        56,
+        0,
+        1,
+        6,
+        0,
+        0,
+        0,
+        0,
+        1,
+        6,
+        2,
+        37,
+        8,
+        9,
+        1,
         10,
+        0,
+        0,
+        13,
+        0,
         4,
+        5,
         0
     ],
-    "commits_last_year": 287,
-    "latest_tag": "v0.20.2",
+    "commits_last_year": 273,
+    "latest_tag": "v0.20.3",
     "branches_count": 1,
     "pulls_count": 0,
-    "subscribers_count": 15,
+    "subscribers_count": 16,
     "license": {
         "key": "mit",
         "name": "MIT License",
@@ -107,7 +108,7 @@
         "node_id": "MDc6TGljZW5zZTEz"
     },
     "contributors_count": 6,
-    "tags_count": 54,
+    "tags_count": 55,
     "open_issues": {
         "labels": [
             "not set"
