Update card data

--- a/data/thombashi_tcconfig.json
+++ b/data/thombashi_tcconfig.json
@@ -1,16 +1,16 @@
 {
     "id": "thombashi/tcconfig",
-    "fetched_at": "2018-10-14T17:47:11",
+    "fetched_at": "2018-10-30T22:28:17",
     "data_version": 2,
     "result": "success",
     "avatar_url": "https://avatars0.githubusercontent.com/u/15517661?v=4",
     "card_type": "Repository",
     "created_at": "2016-01-17T16:24:09",
-    "description": "A tc command wrapper. Easy to set up traffic control of network bandwidth/latency/packet-loss/packet-corruption/etc. to a network-interface/Docker-container(veth).",
+    "description": "A tc command wrapper. Make it easy to set up traffic control of network bandwidth/latency/packet-loss/packet-corruption/etc. to a network-interface/Docker-container(veth).",
     "emojis": {},
     "html_url": "https://github.com/thombashi/tcconfig",
     "name": "tcconfig",
-    "updated_at": "2018-10-13T19:02:50",
+    "updated_at": "2018-10-25T11:05:24",
     "forks_count": 32,
     "has_issues": true,
     "has_wiki": false,
@@ -21,8 +21,8 @@
             "Shell"
         ],
         "data": [
-            279374,
-            1944
+            279417,
+            2321
         ]
     },
     "languages_count": 2,
@@ -31,7 +31,7 @@
     "open_issues_count": 1,
     "organization": {},
     "repo_homepage": "https://tcconfig.rtfd.io/",
-    "stargazers_count": 310,
+    "stargazers_count": 313,
     "topics": [
         "cli-app",
         "docker",
@@ -42,61 +42,61 @@
         "wrapper"
     ],
     "participation": [
-        6,
+        14,
+        0,
+        0,
+        0,
+        0,
+        0,
+        0,
+        0,
+        9,
+        0,
+        0,
+        5,
+        0,
+        17,
+        0,
+        0,
+        0,
+        0,
+        0,
+        0,
+        0,
+        0,
+        45,
+        0,
         7,
-        12,
-        3,
+        5,
+        54,
         0,
-        0,
-        0,
-        0,
-        0,
-        0,
+        1,
         6,
-        3,
-        0,
-        5,
-        0,
-        1,
-        16,
-        0,
-        0,
-        0,
-        0,
-        0,
-        0,
-        0,
-        19,
-        26,
-        2,
-        5,
-        59,
-        0,
-        1,
-        4,
-        2,
         0,
         0,
         0,
         0,
         7,
+        0,
+        35,
+        4,
+        8,
+        9,
         1,
-        38,
-        4,
-        4,
         10,
         0,
-        10,
         0,
-        3,
-        10,
+        13,
+        0,
         4,
-        1,
-        4,
+        5,
+        0,
+        48,
+        0,
         0
     ],
-    "commits_last_year": 273,
-    "latest_tag": "v0.20.3",
+    "commits_last_year": 307,
+    "latest_tag": "v0.21.0",
     "branches_count": 1,
     "pulls_count": 0,
     "subscribers_count": 16,
@@ -108,7 +108,7 @@
         "node_id": "MDc6TGljZW5zZTEz"
     },
     "contributors_count": 6,
-    "tags_count": 55,
+    "tags_count": 56,
     "open_issues": {
         "labels": [
             "not set"
