Update card data

--- a/data/thombashi_appconfigpy.json
+++ b/data/thombashi_appconfigpy.json
@@ -1,6 +1,6 @@
 {
     "id": "thombashi/appconfigpy",
-    "fetched_at": "2018-11-26T12:08:49",
+    "fetched_at": "2018-12-25T10:27:14",
     "data_version": 2,
     "result": "success",
     "avatar_url": "https://avatars0.githubusercontent.com/u/15517661?v=4",
@@ -10,20 +10,22 @@
     "emojis": {},
     "html_url": "https://github.com/thombashi/appconfigpy",
     "name": "appconfigpy",
-    "updated_at": "2018-10-08T08:10:31",
+    "updated_at": "2018-12-23T15:17:03",
     "forks_count": 0,
     "has_issues": true,
     "has_wiki": false,
     "language": "Python",
     "languages": {
         "labels": [
-            "Python"
+            "Python",
+            "Makefile"
         ],
         "data": [
-            9915
+            9914,
+            286
         ]
     },
-    "languages_count": 1,
+    "languages_count": 2,
     "owner_name": "Tsuyoshi Hombashi",
     "owner_html_url": "https://github.com/thombashi",
     "open_issues_count": 0,
@@ -50,14 +52,9 @@
         0,
         0,
         0,
-        0,
-        0,
-        0,
-        0,
         2,
         0,
         1,
-        0,
         17,
         0,
         0,
@@ -72,13 +69,13 @@
         0,
         0,
         0,
-        5,
         0,
+        5,
         4,
         0,
         0,
-        2,
         0,
+        2,
         0,
         0,
         6,
@@ -87,10 +84,15 @@
         0,
         0,
         0,
-        0
+        0,
+        0,
+        0,
+        0,
+        0,
+        5
     ],
-    "commits_last_year": 37,
-    "latest_tag": "v0.0.7",
+    "commits_last_year": 42,
+    "latest_tag": "v0.0.8",
     "branches_count": 1,
     "pulls_count": 0,
     "subscribers_count": 1,
@@ -102,7 +104,7 @@
         "node_id": "MDc6TGljZW5zZTEz"
     },
     "contributors_count": 1,
-    "tags_count": 7,
+    "tags_count": 8,
     "open_issues": {
         "labels": [],
         "data": []
