--- a/data/thombashi_tcconfig.json
+++ b/data/thombashi_tcconfig.json
@@ -1,6 +1,6 @@
 {
     "id": "thombashi/tcconfig",
-    "fetched_at": "2018-11-26T12:08:36",
+    "fetched_at": "2018-12-25T10:26:59",
     "data_version": 2,
     "result": "success",
     "avatar_url": "https://avatars0.githubusercontent.com/u/15517661?v=4",
@@ -10,28 +10,30 @@
     "emojis": {},
     "html_url": "https://github.com/thombashi/tcconfig",
     "name": "tcconfig",
-    "updated_at": "2018-11-20T16:28:52",
-    "forks_count": 33,
+    "updated_at": "2018-12-24T12:22:22",
+    "forks_count": 34,
     "has_issues": true,
     "has_wiki": false,
     "language": "Python",
     "languages": {
         "labels": [
             "Python",
-            "Shell"
+            "Shell",
+            "Makefile"
         ],
         "data": [
-            279417,
-            2321
+            279466,
+            2321,
+            552
         ]
     },
-    "languages_count": 2,
+    "languages_count": 3,
     "owner_name": "Tsuyoshi Hombashi",
     "owner_html_url": "https://github.com/thombashi",
     "open_issues_count": 1,
     "organization": {},
     "repo_homepage": "https://tcconfig.rtfd.io/",
-    "stargazers_count": 317,
+    "stargazers_count": 325,
     "topics": [
         "cli-app",
         "docker",
@@ -42,12 +44,8 @@
         "wrapper"
     ],
     "participation": [
+        9,
         0,
-        0,
-        0,
-        0,
-        6,
-        3,
         0,
         5,
         0,
@@ -63,8 +61,8 @@
         45,
         0,
         7,
-        3,
-        56,
+        5,
+        54,
         0,
         1,
         6,
@@ -72,10 +70,10 @@
         0,
         0,
         0,
-        1,
-        6,
-        2,
-        37,
+        7,
+        0,
+        35,
+        4,
         8,
         9,
         1,
@@ -93,10 +91,14 @@
         0,
         0,
         0,
-        0
+        0,
+        0,
+        0,
+        0,
+        8
     ],
-    "commits_last_year": 293,
-    "latest_tag": "v0.21.0",
+    "commits_last_year": 301,
+    "latest_tag": "v0.21.1",
     "branches_count": 1,
     "pulls_count": 0,
     "subscribers_count": 16,
@@ -108,7 +110,7 @@
         "node_id": "MDc6TGljZW5zZTEz"
     },
     "contributors_count": 6,
-    "tags_count": 56,
+    "tags_count": 57,
     "open_issues": {
         "labels": [
             "not set"
