Update card data

--- a/data/thombashi_tcconfig.json
+++ b/data/thombashi_tcconfig.json
@@ -1,6 +1,6 @@
 {
     "id": "thombashi/tcconfig",
-    "fetched_at": "2019-01-19T11:05:01",
+    "fetched_at": "2019-02-04T12:25:48",
     "data_version": 2,
     "result": "success",
     "avatar_url": "https://avatars0.githubusercontent.com/u/15517661?v=4",
@@ -10,7 +10,7 @@
     "emojis": {},
     "html_url": "https://github.com/thombashi/tcconfig",
     "name": "tcconfig",
-    "updated_at": "2019-01-15T03:49:59",
+    "updated_at": "2019-02-03T14:42:05",
     "forks_count": 34,
     "has_issues": true,
     "has_wiki": false,
@@ -22,18 +22,18 @@
             "Makefile"
         ],
         "data": [
-            281058,
-            2321,
-            688
+            282579,
+            2326,
+            892
         ]
     },
     "languages_count": 3,
     "owner_name": "Tsuyoshi Hombashi",
     "owner_html_url": "https://github.com/thombashi",
-    "open_issues_count": 1,
+    "open_issues_count": 3,
     "organization": {},
     "repo_homepage": "https://tcconfig.rtfd.io/",
-    "stargazers_count": 328,
+    "stargazers_count": 329,
     "topics": [
         "cli-app",
         "docker",
@@ -44,45 +44,43 @@
         "wrapper"
     ],
     "participation": [
+        16,
+        0,
+        0,
+        0,
+        0,
+        0,
+        0,
+        0,
+        19,
+        26,
+        2,
         5,
-        0,
-        17,
-        0,
-        0,
-        0,
-        0,
-        0,
-        0,
-        0,
-        0,
-        45,
-        0,
-        7,
-        36,
-        23,
+        59,
         0,
         1,
-        6,
-        0,
-        0,
-        0,
-        0,
-        7,
-        0,
-        35,
         4,
-        8,
-        9,
+        2,
+        0,
+        0,
+        0,
+        0,
+        7,
         1,
+        38,
+        4,
+        4,
         10,
         0,
+        10,
         0,
-        13,
-        0,
+        3,
+        10,
         4,
-        5,
-        0,
-        48,
+        1,
+        4,
+        17,
+        31,
         0,
         0,
         0,
@@ -93,12 +91,14 @@
         0,
         0,
         8,
-        15,
-        3,
-        8
+        18,
+        0,
+        8,
+        13,
+        0
     ],
-    "commits_last_year": 318,
-    "latest_tag": "v0.21.4",
+    "commits_last_year": 325,
+    "latest_tag": "v0.21.7",
     "branches_count": 1,
     "pulls_count": 0,
     "subscribers_count": 16,
@@ -110,12 +110,14 @@
         "node_id": "MDc6TGljZW5zZTEz"
     },
     "contributors_count": 7,
-    "tags_count": 60,
+    "tags_count": 63,
     "open_issues": {
         "labels": [
-            "not set"
+            "not set",
+            "enhancement"
         ],
         "data": [
+            2,
             1
         ]
     }
