--- a/data/thombashi_tcconfig.json
+++ b/data/thombashi_tcconfig.json
@@ -1,6 +1,6 @@
 {
     "id": "thombashi/tcconfig",
-    "fetched_at": "2019-04-14T22:06:16",
+    "fetched_at": "2019-04-21T00:47:07",
     "data_version": 2,
     "result": "success",
     "avatar_url": "https://avatars0.githubusercontent.com/u/15517661?v=4",
@@ -10,7 +10,7 @@
     "emojis": {},
     "html_url": "https://github.com/thombashi/tcconfig",
     "name": "tcconfig",
-    "updated_at": "2019-04-13T17:55:47",
+    "updated_at": "2019-04-20T14:07:24",
     "forks_count": 36,
     "has_issues": true,
     "has_wiki": false,
@@ -30,10 +30,10 @@
     "languages_count": 3,
     "owner_name": "Tsuyoshi Hombashi",
     "owner_html_url": "https://github.com/thombashi",
-    "open_issues_count": 5,
+    "open_issues_count": 4,
     "organization": {},
     "repo_homepage": "https://tcconfig.rtfd.io/",
-    "stargazers_count": 344,
+    "stargazers_count": 348,
     "topics": [
         "cli-app",
         "docker",
@@ -44,13 +44,12 @@
         "wrapper"
     ],
     "participation": [
+        7,
+        57,
         2,
-        5,
-        59,
         0,
         1,
-        4,
-        2,
+        6,
         0,
         0,
         0,
@@ -58,19 +57,19 @@
         7,
         1,
         38,
-        4,
-        4,
-        10,
-        0,
-        10,
-        0,
-        3,
-        10,
-        4,
         1,
+        7,
+        10,
+        0,
+        10,
+        0,
+        0,
+        13,
+        0,
         4,
-        17,
-        31,
+        5,
+        13,
+        35,
         0,
         0,
         0,
@@ -81,24 +80,25 @@
         0,
         0,
         8,
-        18,
-        0,
+        16,
+        2,
         8,
         13,
         0,
         17,
         23,
         0,
-        10,
-        0,
+        9,
+        1,
         2,
         19,
+        0,
         0,
         0,
         11
     ],
     "commits_last_year": 346,
-    "latest_tag": "v0.22.2",
+    "latest_tag": "v0.22.3",
     "branches_count": 1,
     "pulls_count": 0,
     "subscribers_count": 15,
@@ -110,17 +110,15 @@
         "node_id": "MDc6TGljZW5zZTEz"
     },
     "contributors_count": 7,
-    "tags_count": 68,
+    "tags_count": 69,
     "open_issues": {
         "labels": [
             "not set",
-            "enhancement",
-            "bug"
+            "enhancement"
         ],
         "data": [
             2,
-            2,
-            1
+            2
         ]
     }
 }
