Update card data

--- a/data/thombashi_tcconfig.json
+++ b/data/thombashi_tcconfig.json
@@ -1,6 +1,6 @@
 {
     "id": "thombashi/tcconfig",
-    "fetched_at": "2019-05-19T00:06:31",
+    "fetched_at": "2020-01-12T12:27:29",
     "data_version": 2,
     "result": "success",
     "avatar_url": "https://avatars0.githubusercontent.com/u/15517661?v=4",
@@ -10,8 +10,8 @@
     "emojis": {},
     "html_url": "https://github.com/thombashi/tcconfig",
     "name": "tcconfig",
-    "updated_at": "2019-05-18T09:32:17",
-    "forks_count": 37,
+    "updated_at": "2020-01-11T21:21:25",
+    "forks_count": 44,
     "has_issues": true,
     "has_wiki": false,
     "language": "Python",
@@ -30,10 +30,10 @@
     "languages_count": 3,
     "owner_name": "Tsuyoshi Hombashi",
     "owner_html_url": "https://github.com/thombashi",
-    "open_issues_count": 5,
+    "open_issues_count": 10,
     "organization": {},
     "repo_homepage": "https://tcconfig.rtfd.io/",
-    "stargazers_count": 355,
+    "stargazers_count": 419,
     "topics": [
         "cli-app",
         "docker",
@@ -44,64 +44,64 @@
         "wrapper"
     ],
     "participation": [
-        1,
-        6,
-        0,
-        0,
-        0,
-        0,
-        7,
-        1,
-        38,
-        1,
-        7,
-        10,
-        0,
-        10,
-        0,
-        0,
-        13,
-        0,
-        4,
-        5,
-        13,
-        35,
-        0,
-        0,
-        0,
-        0,
-        0,
-        0,
-        0,
-        0,
-        0,
-        8,
-        16,
-        2,
         8,
         13,
         0,
         17,
         23,
         0,
-        9,
-        1,
+        10,
+        0,
         2,
         19,
-        0,
         0,
         0,
         11,
         3,
         0,
         0,
-        13
+        3,
+        13,
+        0,
+        0,
+        0,
+        0,
+        0,
+        0,
+        0,
+        0,
+        0,
+        0,
+        0,
+        0,
+        0,
+        0,
+        0,
+        0,
+        0,
+        0,
+        0,
+        0,
+        0,
+        0,
+        0,
+        0,
+        0,
+        0,
+        0,
+        0,
+        0,
+        0,
+        0,
+        0,
+        0,
+        0
     ],
-    "commits_last_year": 296,
+    "commits_last_year": 122,
     "latest_tag": "v0.23.0",
     "branches_count": 1,
     "pulls_count": 0,
-    "subscribers_count": 17,
+    "subscribers_count": 18,
     "license": {
         "key": "mit",
         "name": "MIT License",
@@ -115,11 +115,11 @@
         "labels": [
             "not set",
             "enhancement",
-            "document"
+            "bug"
         ],
         "data": [
-            2,
-            2,
+            5,
+            4,
             1
         ]
     }
