--- a/ghscard/demo/data/angular.json
+++ b/ghscard/demo/data/angular.json
@@ -1,1 +1,21 @@
-{"blog": "https://angular.io", "public_gists": 0, "description": "", "public_repos": 166, "created_at": "2009-10-13T22:16:19", "public_members_count": 65, "html_url": "https://github.com/angular", "updated_at": "2017-02-19T06:06:56", "card_type": "Organization", "data_version": 1, "avatar_url": "https://avatars0.githubusercontent.com/u/139426?v=3", "location": "", "email": "", "fetched_at": "2017-03-27T08:14:49", "emojis": {}, "company": null, "id": "angular", "name": "angular"}
+{
+    "id": "angular",
+    "fetched_at": "2020-01-13T18:27:38",
+    "data_version": 2,
+    "result": "success",
+    "avatar_url": "https://avatars3.githubusercontent.com/u/139426?v=4",
+    "card_type": "Organization",
+    "created_at": "2009-10-13T22:16:19",
+    "description": "",
+    "emojis": {},
+    "html_url": "https://github.com/angular",
+    "name": "angular",
+    "updated_at": "2019-12-19T20:47:46",
+    "blog": "https://angular.io",
+    "company": null,
+    "email": null,
+    "location": null,
+    "public_gists": 0,
+    "public_repos": 192,
+    "public_members_count": 55
+}
