--- a/ghscard/demo/data/getify_You-Dont-Know-JS.json
+++ b/ghscard/demo/data/getify_You-Dont-Know-JS.json
@@ -1,1 +1,127 @@
-{"has_wiki": true, "topics": ["async", "book", "book-series", "closures", "education", "es2015", "es6", "javascript", "learn-to-code", "programming", "prototypes", "training-materials", "training-providers"], "forks_count": 8809, "updated_at": "2017-04-02T03:06:17", "owner_html_url": "https://github.com/getify", "result": "success", "branches_count": 2, "id": "getify/You-Dont-Know-JS", "license": {"spdx_id": null, "url": null, "featured": false, "name": "Other", "key": "other"}, "tags_count": 0, "languages": {"labels": ["JavaScript", "HTML", "CSS"], "data": [62074, 6482, 1987]}, "data_version": 2, "pulls_count": 41, "stargazers_count": 55162, "emojis": {}, "participation": [0, 3, 2, 2, 3, 0, 3, 1, 0, 2, 1, 0, 3, 0, 6, 0, 2, 2, 0, 8, 0, 0, 4, 3, 0, 0, 0, 0, 0, 2, 2, 3, 0, 2, 0, 0, 0, 0, 0, 2, 0, 0, 0, 0, 0, 0, 0, 5, 0, 0, 2, 0], "owner_name": "Kyle Simpson", "description": "A book series on JavaScript. @YDKJS on twitter.", "repo_homepage": "http://www.kickstarter.com/projects/getify/you-dont-know-js-book-series", "subscribers_count": 3185, "html_url": "https://github.com/getify/You-Dont-Know-JS", "languages_count": 3, "commits_last_year": 63, "contributors_count": 151, "fetched_at": "2017-04-02T12:29:40", "has_issues": true, "open_issues_count": 133, "name": "You-Dont-Know-JS", "language": "JavaScript", "created_at": "2013-11-16T02:37:24", "card_type": "Repository", "avatar_url": "https://avatars2.githubusercontent.com/u/150330?v=3", "open_issues": {"labels": ["second edition", "not set", "editorial", "question", "errata", "help wanted", "foreign language translations"], "data": [87, 44, 3, 2, 2, 1, 1]}, "organization": {}}
+{
+    "id": "getify/You-Dont-Know-JS",
+    "fetched_at": "2020-01-13T17:57:17",
+    "data_version": 2,
+    "result": "success",
+    "avatar_url": "https://avatars1.githubusercontent.com/u/150330?v=4",
+    "card_type": "Repository",
+    "created_at": "2013-11-16T02:37:24",
+    "description": "A book series on JavaScript. @YDKJS on twitter.",
+    "emojis": {},
+    "html_url": "https://github.com/getify/You-Dont-Know-JS",
+    "name": "You-Dont-Know-JS",
+    "updated_at": "2020-01-13T08:55:10",
+    "forks_count": 22939,
+    "has_issues": true,
+    "has_wiki": true,
+    "language": null,
+    "languages": {
+        "labels": [],
+        "data": []
+    },
+    "languages_count": 0,
+    "owner_name": "Kyle Simpson",
+    "owner_html_url": "https://github.com/getify",
+    "open_issues_count": 128,
+    "organization": {},
+    "repo_homepage": null,
+    "stargazers_count": 114562,
+    "topics": [
+        "async",
+        "book",
+        "book-series",
+        "closures",
+        "education",
+        "es2015",
+        "es6",
+        "javascript",
+        "learn-to-code",
+        "programming",
+        "prototypes",
+        "training-materials",
+        "training-providers"
+    ],
+    "participation": [
+        0,
+        0,
+        0,
+        0,
+        0,
+        0,
+        0,
+        0,
+        0,
+        0,
+        0,
+        0,
+        0,
+        0,
+        0,
+        0,
+        0,
+        0,
+        0,
+        0,
+        0,
+        0,
+        0,
+        0,
+        0,
+        0,
+        0,
+        0,
+        0,
+        0,
+        0,
+        3,
+        7,
+        0,
+        0,
+        0,
+        0,
+        0,
+        0,
+        6,
+        18,
+        22,
+        8,
+        12,
+        16,
+        4,
+        10,
+        21,
+        1,
+        0,
+        0,
+        1
+    ],
+    "commits_last_year": 129,
+    "branches_count": 4,
+    "pulls_count": 48,
+    "subscribers_count": 5281,
+    "license": {
+        "key": "other",
+        "name": "Other",
+        "spdx_id": "NOASSERTION",
+        "url": null,
+        "node_id": "MDc6TGljZW5zZTA="
+    },
+    "contributors_count": 166,
+    "tags_count": 0,
+    "open_issues": {
+        "labels": [
+            "for second edition",
+            "editorial",
+            "not set",
+            "errata",
+            "question"
+        ],
+        "data": [
+            112,
+            14,
+            4,
+            2,
+            1
+        ]
+    }
+}
