--- a/data/thombashi_tcconfig.json
+++ b/data/thombashi_tcconfig.json
@@ -1,6 +1,6 @@
 {
     "id": "thombashi/tcconfig",
-    "fetched_at": "2020-01-13T16:31:59",
+    "fetched_at": "2020-01-19T19:35:17",
     "data_version": 2,
     "result": "success",
     "avatar_url": "https://avatars0.githubusercontent.com/u/15517661?v=4",
@@ -10,7 +10,7 @@
     "emojis": {},
     "html_url": "https://github.com/thombashi/tcconfig",
     "name": "tcconfig",
-    "updated_at": "2020-01-11T21:21:25",
+    "updated_at": "2020-01-19T09:47:11",
     "forks_count": 44,
     "has_issues": true,
     "has_wiki": false,
@@ -22,18 +22,18 @@
             "Makefile"
         ],
         "data": [
-            269688,
-            2337,
-            1028
+            277845,
+            2789,
+            889
         ]
     },
     "languages_count": 3,
     "owner_name": "Tsuyoshi Hombashi",
     "owner_html_url": "https://github.com/thombashi",
-    "open_issues_count": 10,
+    "open_issues_count": 11,
     "organization": {},
     "repo_homepage": "https://tcconfig.rtfd.io/",
-    "stargazers_count": 419,
+    "stargazers_count": 420,
     "topics": [
         "cli-app",
         "docker",
@@ -44,24 +44,23 @@
         "wrapper"
     ],
     "participation": [
-        5,
-        8,
+        13,
+        0,
         17,
         23,
         0,
+        10,
         0,
-        10,
         2,
-        10,
-        9,
+        19,
         0,
         0,
         11,
         3,
         0,
         0,
-        13,
         3,
+        13,
         0,
         0,
         0,
@@ -95,10 +94,11 @@
         0,
         0,
         0,
-        0
+        0,
+        12
     ],
-    "commits_last_year": 114,
-    "latest_tag": "v0.23.0",
+    "commits_last_year": 126,
+    "latest_tag": "v0.24.0",
     "branches_count": 1,
     "pulls_count": 0,
     "subscribers_count": 18,
@@ -110,16 +110,18 @@
         "node_id": "MDc6TGljZW5zZTEz"
     },
     "contributors_count": 7,
-    "tags_count": 70,
+    "tags_count": 71,
     "open_issues": {
         "labels": [
             "not set",
             "enhancement",
-            "bug"
+            "bug",
+            "question"
         ],
         "data": [
             5,
             4,
+            1,
             1
         ]
     }
