--- a/data/thombashi_tcconfig.json
+++ b/data/thombashi_tcconfig.json
@@ -1,6 +1,6 @@
 {
     "id": "thombashi/tcconfig",
-    "fetched_at": "2020-02-03T22:38:53",
+    "fetched_at": "2020-02-13T00:15:22",
     "data_version": 2,
     "result": "success",
     "avatar_url": "https://avatars0.githubusercontent.com/u/15517661?v=4",
@@ -10,8 +10,8 @@
     "emojis": {},
     "html_url": "https://github.com/thombashi/tcconfig",
     "name": "tcconfig",
-    "updated_at": "2020-02-02T14:15:54",
-    "forks_count": 45,
+    "updated_at": "2020-02-12T15:05:31",
+    "forks_count": 46,
     "has_issues": true,
     "has_wiki": false,
     "language": "Python",
@@ -22,7 +22,7 @@
             "Makefile"
         ],
         "data": [
-            277619,
+            277101,
             2789,
             449
         ]
@@ -33,7 +33,7 @@
     "open_issues_count": 13,
     "organization": {},
     "repo_homepage": "https://tcconfig.rtfd.io/",
-    "stargazers_count": 422,
+    "stargazers_count": 426,
     "topics": [
         "cli-app",
         "docker",
@@ -44,13 +44,12 @@
         "wrapper"
     ],
     "participation": [
-        23,
         0,
-        0,
-        10,
-        2,
-        10,
         9,
+        1,
+        2,
+        19,
+        0,
         0,
         0,
         11,
@@ -95,9 +94,10 @@
         0,
         40,
         0,
-        15
+        15,
+        3
     ],
-    "commits_last_year": 139,
+    "commits_last_year": 119,
     "latest_tag": "v0.24.1",
     "branches_count": 1,
     "pulls_count": 0,
@@ -113,17 +113,19 @@
     "tags_count": 72,
     "open_issues": {
         "labels": [
-            "not set",
             "enhancement",
+            "not set",
+            "wontfix",
             "needs-info",
             "refactoring",
             "bug",
             "help wanted",
-            "question"
+            "others"
         ],
         "data": [
-            5,
             4,
+            3,
+            2,
             1,
             1,
             1,
