--- a/data/thombashi_tcconfig.json
+++ b/data/thombashi_tcconfig.json
@@ -1,6 +1,6 @@
 {
     "id": "thombashi/tcconfig",
-    "fetched_at": "2020-03-02T00:54:36",
+    "fetched_at": "2020-03-27T00:29:12",
     "data_version": 2,
     "result": "success",
     "avatar_url": "https://avatars0.githubusercontent.com/u/15517661?v=4",
@@ -10,7 +10,7 @@
     "emojis": {},
     "html_url": "https://github.com/thombashi/tcconfig",
     "name": "tcconfig",
-    "updated_at": "2020-03-01T14:11:08",
+    "updated_at": "2020-03-22T10:48:30",
     "forks_count": 46,
     "has_issues": true,
     "has_wiki": false,
@@ -30,10 +30,10 @@
     "languages_count": 3,
     "owner_name": "Tsuyoshi Hombashi",
     "owner_html_url": "https://github.com/thombashi",
-    "open_issues_count": 11,
+    "open_issues_count": 7,
     "organization": {},
     "repo_homepage": "https://tcconfig.rtfd.io/",
-    "stargazers_count": 429,
+    "stargazers_count": 436,
     "topics": [
         "cli-app",
         "docker",
@@ -45,16 +45,13 @@
     ],
     "participation": [
         0,
-        2,
-        19,
-        0,
         0,
         11,
         3,
         0,
         0,
-        3,
         13,
+        3,
         0,
         0,
         0,
@@ -89,15 +86,18 @@
         0,
         0,
         0,
-        12,
-        28,
-        1,
-        16,
-        11,
-        20,
-        9
+        40,
+        0,
+        15,
+        7,
+        26,
+        9,
+        4,
+        0,
+        0,
+        0
     ],
-    "commits_last_year": 148,
+    "commits_last_year": 131,
     "latest_tag": "v0.25.2",
     "branches_count": 1,
     "pulls_count": 0,
@@ -114,17 +114,13 @@
     "open_issues": {
         "labels": [
             "enhancement",
-            "not set",
-            "wontfix",
-            "needs-info",
             "refactoring",
+            "stale",
             "bug",
             "help wanted"
         ],
         "data": [
             4,
-            2,
-            2,
             1,
             1,
             1,
