--- a/data/thombashi_tcconfig.json
+++ b/data/thombashi_tcconfig.json
@@ -1,6 +1,6 @@
 {
     "id": "thombashi/tcconfig",
-    "fetched_at": "2020-05-27T23:57:08",
+    "fetched_at": "2020-07-26T01:47:45",
     "data_version": 2,
     "result": "success",
     "avatar_url": "https://avatars0.githubusercontent.com/u/15517661?v=4",
@@ -10,8 +10,8 @@
     "emojis": {},
     "html_url": "https://github.com/thombashi/tcconfig",
     "name": "tcconfig",
-    "updated_at": "2020-05-16T01:14:04",
-    "forks_count": 48,
+    "updated_at": "2020-07-25T06:26:57",
+    "forks_count": 54,
     "has_issues": true,
     "has_wiki": false,
     "language": "Python",
@@ -22,18 +22,18 @@
             "Makefile"
         ],
         "data": [
-            272809,
+            277123,
             2841,
-            885
+            868
         ]
     },
     "languages_count": 3,
     "owner_name": "Tsuyoshi Hombashi",
     "owner_html_url": "https://github.com/thombashi",
-    "open_issues_count": 5,
+    "open_issues_count": 10,
     "organization": {},
     "repo_homepage": "https://tcconfig.rtfd.io/",
-    "stargazers_count": 446,
+    "stargazers_count": 453,
     "topics": [
         "cli-app",
         "docker",
@@ -68,20 +68,12 @@
         0,
         0,
         0,
-        0,
-        0,
-        0,
-        0,
-        0,
-        0,
-        0,
-        0,
-        0,
-        40,
+        11,
+        29,
         0,
         15,
-        3,
-        30,
+        10,
+        23,
         9,
         4,
         0,
@@ -95,13 +87,21 @@
         0,
         5,
         0,
-        0
+        2,
+        0,
+        0,
+        0,
+        0,
+        0,
+        0,
+        0,
+        41
     ],
-    "commits_last_year": 115,
-    "latest_tag": "v0.25.2",
+    "commits_last_year": 158,
+    "latest_tag": "v0.26.0",
     "branches_count": 1,
-    "pulls_count": 0,
-    "subscribers_count": 19,
+    "pulls_count": 1,
+    "subscribers_count": 20,
     "license": {
         "key": "mit",
         "name": "MIT License",
@@ -109,16 +109,24 @@
         "url": "https://api.github.com/licenses/mit",
         "node_id": "MDc6TGljZW5zZTEz"
     },
-    "contributors_count": 7,
-    "tags_count": 75,
+    "contributors_count": 8,
+    "tags_count": 77,
     "open_issues": {
         "labels": [
             "enhancement",
+            "needs-info",
+            "needs-triage",
+            "not set",
+            "question",
             "refactoring",
             "help wanted"
         ],
         "data": [
             4,
+            2,
+            1,
+            1,
+            1,
             1,
             1
         ]
