--- a/data/thombashi_tcconfig.json
+++ b/data/thombashi_tcconfig.json
@@ -1,6 +1,6 @@
 {
     "id": "thombashi/tcconfig",
-    "fetched_at": "2020-07-28T23:07:54",
+    "fetched_at": "2020-08-10T00:44:07",
     "data_version": 2,
     "result": "success",
     "avatar_url": "https://avatars0.githubusercontent.com/u/15517661?v=4",
@@ -10,7 +10,7 @@
     "emojis": {},
     "html_url": "https://github.com/thombashi/tcconfig",
     "name": "tcconfig",
-    "updated_at": "2020-07-25T06:26:57",
+    "updated_at": "2020-08-07T05:38:10",
     "forks_count": 54,
     "has_issues": true,
     "has_wiki": false,
@@ -33,7 +33,7 @@
     "open_issues_count": 10,
     "organization": {},
     "repo_homepage": "https://tcconfig.rtfd.io/",
-    "stargazers_count": 453,
+    "stargazers_count": 457,
     "topics": [
         "cli-app",
         "docker",
@@ -66,13 +66,12 @@
         0,
         0,
         0,
-        0,
-        0,
-        40,
-        0,
-        15,
-        2,
-        31,
+        12,
+        28,
+        1,
+        16,
+        11,
+        20,
         9,
         4,
         0,
@@ -86,7 +85,6 @@
         0,
         5,
         0,
-        0,
         2,
         0,
         0,
@@ -94,10 +92,12 @@
         0,
         0,
         0,
-        11,
-        31
+        0,
+        42,
+        4,
+        0
     ],
-    "commits_last_year": 159,
+    "commits_last_year": 163,
     "latest_tag": "v0.26.0",
     "branches_count": 1,
     "pulls_count": 1,
@@ -113,16 +113,20 @@
     "tags_count": 77,
     "open_issues": {
         "labels": [
-            "enhancement",
             "needs-info",
+            "enhancement",
+            "call-for-opinion",
             "question",
+            "stale",
             "refactoring",
             "help wanted"
         ],
         "data": [
             4,
-            3,
-            2,
+            4,
+            1,
+            1,
+            1,
             1,
             1
         ]
