Update card data

--- a/data/thombashi_tcconfig.json
+++ b/data/thombashi_tcconfig.json
@@ -1,17 +1,17 @@
 {
     "id": "thombashi/tcconfig",
-    "fetched_at": "2020-08-23T10:12:46",
+    "fetched_at": "2021-03-21T23:01:23",
     "data_version": 2,
     "result": "success",
-    "avatar_url": "https://avatars0.githubusercontent.com/u/15517661?v=4",
+    "avatar_url": "https://avatars.githubusercontent.com/u/15517661?v=4",
     "card_type": "Repository",
     "created_at": "2016-01-17T16:24:09",
     "description": "A tc command wrapper. Make it easy to set up traffic control of network bandwidth/latency/packet-loss/packet-corruption/etc. to a network-interface/Docker-container(veth).",
     "emojis": {},
     "html_url": "https://github.com/thombashi/tcconfig",
     "name": "tcconfig",
-    "updated_at": "2020-08-16T15:06:34",
-    "forks_count": 54,
+    "updated_at": "2021-03-20T04:48:51",
+    "forks_count": 62,
     "has_issues": true,
     "has_wiki": false,
     "language": "Python",
@@ -30,10 +30,10 @@
     "languages_count": 3,
     "owner_name": "Tsuyoshi Hombashi",
     "owner_html_url": "https://github.com/thombashi",
-    "open_issues_count": 8,
+    "open_issues_count": 11,
     "organization": {},
     "repo_homepage": "https://tcconfig.rtfd.io/",
-    "stargazers_count": 459,
+    "stargazers_count": 510,
     "topics": [
         "cli-app",
         "docker",
@@ -44,36 +44,6 @@
         "wrapper"
     ],
     "participation": [
-        0,
-        0,
-        0,
-        0,
-        0,
-        0,
-        0,
-        0,
-        0,
-        0,
-        0,
-        0,
-        0,
-        0,
-        0,
-        0,
-        0,
-        0,
-        0,
-        0,
-        12,
-        28,
-        1,
-        16,
-        11,
-        20,
-        9,
-        4,
-        0,
-        0,
         0,
         0,
         0,
@@ -95,13 +65,43 @@
         4,
         0,
         0,
-        4
+        4,
+        2,
+        0,
+        0,
+        0,
+        0,
+        0,
+        0,
+        0,
+        0,
+        0,
+        0,
+        0,
+        0,
+        0,
+        0,
+        0,
+        2,
+        0,
+        0,
+        1,
+        0,
+        0,
+        0,
+        0,
+        0,
+        0,
+        0,
+        0,
+        0,
+        0
     ],
-    "commits_last_year": 167,
+    "commits_last_year": 71,
     "latest_tag": "v0.26.0",
     "branches_count": 1,
-    "pulls_count": 1,
-    "subscribers_count": 20,
+    "pulls_count": 2,
+    "subscribers_count": 24,
     "license": {
         "key": "mit",
         "name": "MIT License",
@@ -114,16 +114,14 @@
     "open_issues": {
         "labels": [
             "enhancement",
-            "call-for-opinion",
-            "needs-info",
             "bug",
+            "needs-triage",
             "refactoring",
             "help wanted"
         ],
         "data": [
-            5,
-            1,
-            1,
+            6,
+            3,
             1,
             1,
             1
